<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_1"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_2"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_3"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/_addition" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/_subtraction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/_multiplication" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_dote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDoteClick"
                android:text="@string/_dote"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_0"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_equally"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/_equally"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperatorClick"
                android:text="@string/_division" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>